<resources>
    <string name="app_name">Rick and Morty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_character">find character</string>
    <string name="filter">filter</string>
    <string name="characters">Characters</string>
    <string name="image_of_character">image of character</string>
    <string name="alive">Alive</string>
    <string name="apply">Apply</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderless">Genderless</string>
    <string name="reset">Reset</string>
    <string name="error_internet_connection">ERROR INTERNET CONNECTION</string>
</resources>