<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.filter.FilterFragment">

    <TextView
        android:id="@+id/txt_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Filter"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="Status"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_filter"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/txt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="10dp"
        android:text="clear"
        android:textColor="@color/teal_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txt_status"
        app:layout_constraintTop_toBottomOf="@id/txt_filter"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/txt_status"
        app:layout_constraintTop_toBottomOf="@id/txt_status">

        <RadioButton
            android:id="@+id/rBtnAlive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alive"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rBtnDead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/dead"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rBtnStatusUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/unknown"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RadioGroup>


    <TextView
        android:id="@+id/txt_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="Gender"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        tools:ignore="HardcodedText" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/txt_gender"
        app:layout_constraintTop_toBottomOf="@id/txt_gender">

        <RadioButton
            android:id="@+id/rBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rBtnFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/female"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rBtnGenderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/genderless"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rBtnGenderUnknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="false"
            android:text="@string/unknown"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_unclicked"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup2" />

</androidx.constraintlayout.widget.ConstraintLayout>